--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 //	테스트를 위한 의존성
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+// Getter, Setter 및 로그관련 의존성
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
