--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 //	테스트를 위한 의존성
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
+//	DB연결을 위한 의존성 : jdbc, mariadb 클라이언트
+//	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.mariadb.jdbc:mariadb-java-client'
 // Getter, Setter 및 로그관련 의존성
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+//	spring data jpa의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//	mybatis관련 의존성 추가
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
 }
 
 tasks.named('test') {
