--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,13 +7,26 @@
 #????? ????.
 #server:
 #  port: 8081
-#spring:
-#  profiles:
-#    active: dev
-#  datasource:
-#    url: url=jdbc:mariadb://localhost:3306/member
-#    username: root
-#    password: 1234
+spring:
+  datasource:
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://localhost:3306/basic
+    username: root
+    password: 1234
+  jpa:
+    database: mysql
+#    innoDB 엔진사용 설정
+    database-platform: org.hibernate.dialect.MariaDBDialect
+#    스키마는 사전생성 필요
+    generate-ddl: true
+    hibernate:
+#      create옵션은 매번 table을 drop후 생성
+#      update옵션은 변경사항만 alter를 적용
+#      validate는 실제DB와의 차이만을 check
+#      실무에서는 update 또는 validate를 사용
+      ddl-auto: create
+#    jpa가 자동으로 쿼리를 실행할때, 쿼리가 console 창에 보여지도록
+    show_sql: true
 
 #---
 #
@@ -26,4 +39,3 @@
 #    url: url=jdbc:mariadb://localhost:3306/member
 #    username: root
 #    password: 1234
-
