--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 //	mybatis관련 의존성 추가
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
+//	jsp를 위한 라이브러리 추가
+	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+//	jspl문법 사용시에 아래의존성 추가
+//	implementation 'javax.servlet:jstl'
+	implementation("io.springfox:springfox-boot-starter:3.0.0")
+
 }
 
 tasks.named('test') {
