--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,10 @@
 #server:
 #  port: 8081
 spring:
+#  mvc:
+#    view:
+#      prefix: /WEB-INF/views/
+#      suffix: .jsp
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://localhost:3306/basic
@@ -30,6 +34,12 @@ spring:
       ddl-auto: update
 #    jpa가 자동으로 쿼리를 실행할때, 쿼리가 console 창에 보여지도록
     show_sql: true
+#    springboot2.4 이상에는 기본적으로 PathPatternParser를 사용하고 있는데,
+#   이는 이전버전과 다른 경로 매칭규칙을 가지고 있어, springfox와 같은 일부라이브러리에서는 문제 발생
+#  url : localhost:8080/swagger-ui/
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 
 #mapper 파일 위치
 mybatis:
